# mega.py

./: .gitignore  .pre-commit-config.yaml  HISTORY.md  LICENSE  README.md  examples.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  ruff.yml
.zed/: debug.json  settings.json
scripts/: make_fs.py
src/mega/: __init__.py  __main__.py  api.py  auth.py  chunker.py  client.py  core.py  crypto.py  data_structures.py  download.py  env.py  errors.py  filesystem.py  main.py  mega.py  progress.py  transfer_it.py  upload.py  utils.py  vault.py
src/mega/cli/: __init__.py  app.py
src/mega/progress/: __init__.py  rich_progress.py
src/tests/: test_errors.py  test_mega.py
tests/: fake_fs.json  test_chunker.py  test_client_benchmark.py  test_crypto.py  test_deserialization.py  test_errors.py  test_filesystem.py  test_mega.py  test_node.py  test_transfer_it.py
